[package]
name = "wavec"
version = "0.1.7-pre-beta"
edition = "2021"

[lib]
name = "wavec"
path = "src/lib.rs"

# [target.x86_64-apple-darwin]
# linker = "clang"
# [target.aarch64-apple-darwin]
# linker = "clang"

[dependencies]
utils = { path = "utils" }
lexer = { path = "front/lexer" }
parser = { path = "front/parser" }
error = { path = "front/error" }
llvm = { path = "./llvm" }

[workspace]
members = [
    "front/lexer",
    "front/parser",
    "llvm",
    "front/error",
    "utils",
    ".",
]
