[package]
name = "wavec"
version = "0.1.8-pre-beta"
edition = "2021"

[lib]
name = "wavec"
path = "src/lib.rs"

# [target.x86_64-apple-darwin]
# linker = "clang"
# [target.aarch64-apple-darwin]
# linker = "clang"

[dependencies]
utils = { path = "utils" }
lexer = { path = "front/lexer" }
parser = { path = "front/parser" }
error = { path = "front/error" }
llvm = { path = "./llvm", default-features = false }

[features]
default = ["llvm-target-all"]
llvm-target-all = ["llvm/llvm-target-all"]
llvm-target-x86 = ["llvm/llvm-target-x86"]

[workspace]
members = [
    "front/lexer",
    "front/parser",
    "llvm",
    "front/error",
    "utils",
    ".",
]
