[package]
name = "wavec"
version = "0.1.9-pre-beta"
edition = "2021"

[lib]
name = "wavec"
path = "src/lib.rs"

[dependencies]
utils = { path = "utils" }
lexer = { path = "front/lexer" }
parser = { path = "front/parser" }
error = { path = "front/error" }
llvm = { path = "./llvm", default-features = false }

[features]
default = ["llvm-target-core64"]
llvm-target-core64 = ["llvm-target-x86", "llvm-target-aarch64", "llvm-target-riscv"]
llvm-target-all = ["llvm/llvm-target-all"]
llvm-target-aarch64 = ["llvm/llvm-target-aarch64"]
llvm-target-riscv = ["llvm/llvm-target-riscv"]
llvm-target-x86 = ["llvm/llvm-target-x86"]

[workspace]
members = [
    "front/lexer",
    "front/parser",
    "llvm",
    "front/error",
    "utils",
    ".",
]
