[package]
name = "Wave"
version = "0.1.0"
edition = "2021"
description = "Programming Language"
license = "MPL-2"
authors = ["LunaStev <lunastev@gurmstudios.com>"]
build = "../build.rs"

[build-dependencies]
dotenv = "0.15.0"

[dependencies]


[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[[bin]]
name = "repl"
test = false

[features]
jit = []
interpreter = []
vm = []
