[package]
name = "llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "../front/parser" }
lexer = { path = "../front/lexer" }
error = { path = "../front/error" }
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
llvm-sys = { version = "211.0.0", features = ["prefer-dynamic"] }
