[package]
name = "llvm_temporary"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
parser = { path = "../front/parser" }
lexer = { path = "../front/lexer" }
error = { path = "../front/error" }
inkwell = { version = "0.5.0", features = ["llvm14-0"] }
llvm-sys = { version = "140.1.3", features = ["no-llvm-linking"] }